creando index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Aprendiendo Git</h1>
-  <p>Aprendiendo verisonado de codigo</p>
+  <p>Aprendiendo verisonado de codigo en github</p>
 </body>
 
 </html>
