--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aprendienndo Git</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Aprendiendo Git</h1>
-  <p>Aprendiendo verisonado de codigo en github</p>
+  <p>Aprendiendo verisonado de codigo desde la rama principal</p>
 </body>
 
 </html>
