adding index.js & script to html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <h1>Aprendiendo Git</h1>
-  <p>Aprendiendo verisonado de codigo en github</p>
+  <p>Aprendiendo verisonado de codigo en github desde la rama front</p>
+  <script>
+    console.log("esto fue añadido desde front")
+  </script>
 </body>
 
 </html>
