ading number list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
   <h1>Aprendiendo Git</h1>
   <p>Aprendiendo verisonado de codigo y aprendiendo a resolver conflictos</p>
+  <ol>
+    <li>uno</li>
+    <li>dos</li>
+    <li>tres</li>
+    <li>cuatro</li>
+  </ol>
   <script src="index.js"></script>
 </body>
 
