ading number list with grocery shop list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
   <h1>Aprendiendo Git</h1>
   <p>Aprendiendo verisonado de codigo y aprendiendo a resolver conflictos</p>
+  <ol>
+    <li>uno papas</li>
+    <li>dos agua</li>
+    <li>tres cafe</li>
+    <li>cuatro leche</li>
+  </ol>
   <script src="index.js"></script>
 </body>
 
