ading two paragraphs

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <li>tres cafe</li>
     <li>cuatro leche</li>
   </ol>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat inventore quis, totam exercitationem consectetur
+    praesentium soluta saepe eum optio dignissimos impedit dolorum, voluptates beatae vel autem? Reprehenderit,
+    perferendis. Error, eos!</p>
   <script src="index.js"></script>
 </body>
 
